--- a/_includes/partition-lv.html
+++ b/_includes/partition-lv.html
@@ -83,6 +83,10 @@
       'mention': {
         'strength': -0.8,
         'scaleFactor': 5
+      },
+      'info': {
+        'strength': -8,
+        'scaleFactor': 3,
       }
     }
 
